# vcl-ut

./: .envrc  .gitignore  .guix-channel  .zenodo.json  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.adoc  Cargo.toml  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.adoc.invariants.md  ROADMAP.adoc  TEST-NEEDS.md  arcvix-10-level-query-safety.bib  arcvix-10-level-query-safety.tex  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: backend-matrix.yml  codeql.yml  e2e.yml  hypatia-scan.yml  openssf-compliance.yml  release.yml  static-analysis-gate.yml
.machine_readable/: CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/agent_instructions/: methodology.a2ml
.machine_readable/ai/: PLACEHOLDERS.adoc
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/compliance/reuse/: dep5
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml
.machine_readable/scripts/maintenance/: maint-assault.sh
.well-known/: humans.txt  security.txt
benches/: vcl_bench.rs  vql_bench.rs
container/: .gatekeeper.yaml  0.1-AI-MANIFEST.a2ml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
contractiles/k9/: vcl-total-guard.k9.ncl  vql-ut-guard.k9.ncl
contractiles/must/: Mustfile.a2ml
docs/: QUICKSTART.adoc  THE-10-LEVELS-EXPLAINED.adoc  WHAT-IS-VERISIMDB.adoc  WHY-TYPE-SAFETY-MATTERS.adoc  vcl-total-grammar.ebnf
docs/architecture/: ARCHITECTURE.adoc  DECISIONS.adoc  THREAT-MODEL.adoc  TOPOLOGY.adoc
docs/attribution/: CITATION.cff  CITATIONS.adoc
docs/developer/: ABI-FFI-README.adoc
docs/wikis/: FAQ.adoc  GLOSSARY.adoc
ffi/zig/: build.zig
ffi/zig/src/: lib.zig
panels/: clade.a2ml  manifest.json
src/: README.adoc  lib.rs
src/abi/: Foreign.idr  VclTypes.idr  vclut.ipkg
src/aspects/: README.adoc
src/aspects/integrity/: README.adoc
src/aspects/observability/: README.adoc
src/aspects/security/: README.adoc
src/contracts/: README.adoc
src/core/: Cargo.toml  Checker.idr  Grammar.idr  Levels.idr  Schema.idr  lib.rs
src/definitions/: README.adoc
src/errors/: README.adoc
src/interface/: Cargo.toml  README.adoc  lib.rs
src/interface/abi/: Foreign.idr  Layout.idr  README.adoc  Types.idr
src/interface/dap/: Cargo.toml
src/interface/dap/src/: lib.rs  main.rs
src/interface/ffi/: README.adoc  build.zig
src/interface/ffi/src/: README.adoc  main.zig
src/interface/ffi/test/: README.adoc  integration_test.zig
src/interface/fmt/: Cargo.toml
src/interface/fmt/src/: lib.rs  main.rs
src/interface/lint/: Cargo.toml
src/interface/lint/src/: lib.rs  main.rs
src/interface/lsp/: Cargo.toml
src/interface/lsp/src/: lib.rs  main.rs
tests/: aspect_tests.sh  e2e.sh  e2e_test.rs  integration_test.rs  property_test.rs
