# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vqlut-core"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/vql-ut"
description = "VQL-UT Core: Idris-based type checker and grammar"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
