# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vcltotal-interface"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/vql-ut"
description = "VCL-total Interface: Common interface types"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Canonical proof-surface types (Term, Goal, ProofState, Tactic, TypeInfo).
# Package 4 decision: echidna-core owns the proof surface; vcl-ut owns the
# query surface (Statement, SafetyLevel, Schema). Both sides re-export the
# other's types so downstream consumers pick one crate and get both halves
# of the vcl-ut ↔ echidna seam.
#
# Path dep works because every hyperpolymath repo lives under
# /mnt/eclipse/repos/, so this resolves the same on every estate clone.
echidna-core = { path = "../../../echidna/crates/echidna-core" }
