# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vqlut-fmt"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/vql-ut"

[lib]
name = "vqlut_fmt"
path = "src/lib.rs"

[[bin]]
name = "vqlut-fmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
