# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "vcltotal-lint"
version = "0.1.0"
edition = "2021"
license = "PMPL-1.0-or-later"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/vql-ut"

[lib]
name = "vcltotal_lint"
path = "src/lib.rs"

[[bin]]
name = "vcltotal-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
